--- a/random_facts/site-plan.html
+++ b/random_facts/site-plan.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8">
     <title>Site Plan</title>
-    <link type="text/css" rel="stylesheet" href="styles/site-plan.css">
+    <link type="text/css" rel="stylesheet" href="site-plan.css">
   </head>
 
   <body>
@@ -62,10 +62,10 @@
       <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        Heading Font: [Font Name here]  <!-- change this -->
+        Heading Font: [Monaco]  <!-- change this -->
       </h4>
       <h4>
-        Paragraph Font: [Font Name here]  <!-- change this -->
+        Paragraph Font: [Monaco]  <!-- change this -->
       </h4>
       <h3>
         Normal paragraph example
@@ -125,29 +125,28 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        Those who wish to find truth in all things and in all places will be drawn to my website. Random facts are great for learning random trivia, expanding your brain, and keeping overall interest in the world around you. People will be drawn to my site because it wont be cluttered with unnecessary information or functionalities. They will be able to immediately access random facts to enhance their day or life. 
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/logo.jpeg" alt="image for homepage">
+        <!--<img src="#" alt="image for homepage"> -->
 
       </ul>
-      <h3>[Page 2]</h3>
-      <p>
-        [Written copy for the Page 2 here]
-      </p>
+      <h3>Learn New Facts</h3>
+      
+      <p>I expect visitors to find answers to questions they never knew they had in the first place. A mantis shrimp punches roughly 50 miles per hour underwater. A force strong enough to break crab shells. I did not know that at first but after learning it, it is something I will never be able to forget. Oftentimes I am bored and looking for new things to study or learn and this is a great avenue to do these things. You may learn about the physics behind gravity and how it affects the world around us. Potentially leading you down a rabbit hole of theoretical physics. The opportunities are endless and random facts are only scratching the surface.The main activity I want visitors to be involved in is just learning new random facts. I find curiosity and education to be very important and any way that I can help foster curiosity is a win in my book.</p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/img_2.jpg" width = "300" height = "300" alt="image for page">
+        <img src="images/img_3.jpg" width = "300" height = "300" alt="image for page">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Add a New Fact</h3>
       <p>
-        [Written copy for the Page 3 here]
+        A secondary activity that I want my visitors to join in on is creating new facts that they can submit for others to see and learn from. The main information needed is a large database/list of random facts. The best way to accomplish something is through a collective effort and allowing others to input their own facts can help broaden the horizon of facts available as well as increase the quality of the facts available. 
       </p>
+      <p>I think the main reason that visitors will decide to go to my site is because, like I said earlier, it will be uncluttered as well as it will essentially be open source and community driven. An implementation of the random facts site could be that you could upvote or downvote the facts so that they could be reviewed and see if they need to be altered or deleted. This would drive more people to access the site because the quality of facts given will be higher.</p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/img_1.jpg " width = "300" height = "300" alt="image for page3">
 
       </ul>
       <hr>
