wireframes for siteplan

--- a/random_facts/site-plan.html
+++ b/random_facts/site-plan.html
@@ -146,7 +146,7 @@
       </p>
       <p>I think the main reason that visitors will decide to go to my site is because, like I said earlier, it will be uncluttered as well as it will essentially be open source and community driven. An implementation of the random facts site could be that you could upvote or downvote the facts so that they could be reviewed and see if they need to be altered or deleted. This would drive more people to access the site because the quality of facts given will be higher.</p>
       <p>Images for the Page 3</p>
-        <img src="images/img_1.jpg " width = "300" height = "300" alt="image for page3">
+        <img src="images/img_1.jpg" width = "300" height = "300" alt="image for page3">
 
       </ul>
       <hr>
@@ -158,21 +158,21 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        Logo will go in between nav items
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/homepage-final.drawio.png" alt="home page wireframe">
 
       <h3>[Page 2]</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        picture will go next to 'Random Fact'
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/find-new.drawio.png" alt="page 2 wireframe">
 
       <h3>[Page 3]</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        Picture will nested in disclaimer paragraph
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/create-fact.drawio.png" alt="page 3 wireframe">
     </main>
   </body>
 
