added alt to blogpiv

--- a/wwr/blog.html
+++ b/wwr/blog.html
@@ -22,7 +22,7 @@
       </header>
       <div id="blog">
         <h1>WhiteWater Rafting Blog</h1>
-        <img src ="images/blogpic.jpeg"/>
+        <img src ="images/blogpic.jpeg" alt="blogpic goes here"/>
       </div>
       <div>
         <nav id="blog-nav">
