got the grid down for the homepage

--- a/random_facts/index.html
+++ b/random_facts/index.html
@@ -4,23 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Homepage</title>
 </head>
 <body>
     <header>
-        <div>
+        <div class="navbar">
             <nav>
-                <a id="logo_link" href="index.html">
+                <a class="logo_link" href="index.html">
                     <img class="logo" src="images/logo.png" alt="logo boi" />
                   </a>
-                  <a href="index.html">Home</a>
+                  <div class="links">
                   <a href="find-facts.html">Find More Facts</a>
                   <a href="create-facts.html">Create Your Own Fact</a>
+                </div>
             </nav>
         </div>
     </header>
     <main>
+    <div class="grid-container" >
     <div id="about">
         <p>Random Facts is a free open-source random facts website that allows all users to learn new things and expand their knowledge on the universe. </p>
     </div>
@@ -32,6 +34,7 @@
             <h1>Here is your random fact for the day.</h1>
         </div>
     </div>
+</div>
 </main>
     <footer>
         <p>Random facts is for your everyday random facts needs</p>
