--- a/random_facts/create-facts.html
+++ b/random_facts/create-facts.html
@@ -4,19 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Homepage</title>
 </head>
 <body>
     <header>
-        <div>
+        <div class="navbar">
             <nav>
-                <a id="logo_link" href="index.html">
+                <a class="logo_link" href="index.html">
                     <img class="logo" src="images/logo.png" alt="logo boi" />
                   </a>
-                  <a href="index.html">Home</a>
-                  <a href="find-facts.html">Find More Facts</a>
-                  <a href="create-facts.html">Create Your Own Fact</a>
+                  <a class="find-link" href="find-facts.html">Find More Facts</a>
+                  <a class="create-link" href="create-facts.html">Create Your Own Fact</a>
             </nav>
         </div>
     </header>
