--- a/random_facts/index.html
+++ b/random_facts/index.html
@@ -5,14 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="scripts.js"></script>
     <title>Homepage</title>
 </head>
 <body>
     <header>
         <div class="navbar">
             <nav>
-                <a class="logo_link" href="index.html">
-                    <img class="logo" src="images/logo.png" alt="logo boi" />
+                    <a href="index.html">
+                        <div class="overlay-container">
+                        <img class="logo" src="images/logo.png" alt="logo boi" />
+                        <div class="overlay">
+                            <div class="overlay-text">HomePage</div>
+                        </div>
+                        </div>
                   </a>
                   <div class="links">
                   <a href="find-facts.html">Find More Facts</a>
@@ -23,6 +30,7 @@
     </header>
     <main>
     <div class="grid-container" >
+        
     <div id="about">
         <p>Random Facts is a free open-source random facts website that allows all users to learn new things and expand their knowledge on the universe. </p>
     </div>
