--- a/random_facts/find-facts.html
+++ b/random_facts/find-facts.html
@@ -11,11 +11,18 @@
     <header>
         <div class="navbar">
             <nav>
-                <a class="logo_link" href="index.html">
-                    <img class="logo" src="images/logo.png" alt="logo boi" />
+                    <a href="index.html">
+                        <div class="overlay-container">
+                        <img class="logo" src="images/logo.png" alt="logo boi" />
+                        <div class="overlay">
+                            <div class="overlay-text">HomePage</div>
+                        </div>
+                        </div>
                   </a>
-                  <a class="find-link" href="find-facts.html">Find More Facts</a>
-                  <a class="create-link" href="create-facts.html">Create Your Own Fact</a>
+                  <div class="links">
+                  <a href="find-facts.html">Find More Facts</a>
+                  <a href="create-facts.html">Create Your Own Fact</a>
+                </div>
             </nav>
         </div>
     </header>
