added script for facts and text file

--- a/random_facts/find-facts.html
+++ b/random_facts/find-facts.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css" />
+    <script src="scripts.js"></script>
     <title>Homepage</title>
 </head>
 <body>
@@ -32,9 +33,10 @@
             <h1>Random Fact</h1>
         </div>
         <div id="daily-fact">
-            <h1>Here is your new generated fact.</h1>
+            <h1 id="output"></h1>
         </div>
-        <button>Generate New Fact</button>
+        <button onclick="getRandomLineFromFile('https://raw.githubusercontent.com/PortableHatchet/wdd130/random_facts/master/facts.txt')">Generate New Fact</button>
+
     </div>
 </main>
     <footer>
