created the find-facts page and set up the javascript to grab the random fact

--- a/random_facts/index.html
+++ b/random_facts/index.html
@@ -34,12 +34,12 @@
     <div id="about">
         <p>Random Facts is a free open-source random facts website that allows all users to learn new things and expand their knowledge on the universe. </p>
     </div>
-    <div id="daily">
-        <div id="daily-title">
-            <h1>Random Fact of the Day</h1>
+    <div class="fact">
+        <div class="title">
+            <h3>Random Fact of the Day</h3>
         </div>
-        <div id="daily-fact">
-            <h1>Here is your random fact for the day.</h1>
+        <div class="fact-output">
+            <p>Here is your random fact for the day.</p>
         </div>
     </div>
 </div>
