--- a/random_facts/find-facts.html
+++ b/random_facts/find-facts.html
@@ -28,15 +28,15 @@
         </div>
     </header>
     <main>
-    <div id="new-fact">
-        <div id="title">
-            <h1>Random Fact</h1>
+    <div class="fact">
+        <div class="title">
+            <h3>Random Fact</h3>
         </div>
-        <div id="daily-fact">
-            <h1 id="output"></h1>
+        <div class="fact-output">
+            <p id="output"></p>
         </div>
-        <button onclick="getRandomLineFromFile('https://raw.githubusercontent.com/PortableHatchet/wdd130/random_facts/master/facts.txt')">Generate New Fact</button>
-
+        
+        <button id="generate-button" onclick="getRandomLineFromFile('https://raw.githubusercontent.com/PortableHatchet/wdd130/main/random_facts/facts.txt')">Generate New Fact</button>
     </div>
 </main>
     <footer>
